fix ladder & shop on mobile

--- a/src/components/Shop/Shop.scss
+++ b/src/components/Shop/Shop.scss
@@ -58,14 +58,19 @@
 
 .Shop__products {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 200px;
   grid-column-gap: 8px;
   grid-row-gap: 8px;
   margin: $size-l;
   position: relative;
-  width: 50%;
+  width: 100%;
   z-index: 3;
+
+  @include lg {
+    grid-template-columns: repeat(4, 1fr);
+    width: 50%;
+  }
 }
 
 .Shop__product {
@@ -109,7 +114,11 @@
 }
 
 .Shop__productName {
-  font-size: 0.9rem;
+  font-size: 0.7rem;
+
+  @include lg {
+    font-size: 0.9rem;
+  }
 }
 
 .Shop__productButton {
